--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     />
     <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
 
-    <link rel="stylesheet" href="src/sass/main.scss" />
-    <script defer src="src/js/controller.js"></script>
+    <link rel="stylesheet" href="src/css/style.css" />
+    <script src="vendor/fraction.min.js"></script>
+    <script defer type="module" src="src/js/controller.js"></script>
 
     <title>forkify // Search over 1,000,000 recipes</title>
   </head>
